<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidRC</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="enterIp">Enter Server IP</string>
    <string name="emergency">Emergency</string>
    <string name="yaw">Yaw</string>
    <string name="throttle">Throttle</string>
    <string name="pidyaw">Yaw PID Coefficients</string>
    <string name="pidpitch">Pitch PID Coefficients</string>
    <string name="pidroll">Roll PID Coefficients</string>
    <string name="p">Proportional</string>
    <string name="i">Integral</string>
    <string name="d">Derivative</string>
    <string name="serverSettings">Server Settings</string>

    <string name="pid_Y_P">proportionalY</string>
    <string name="pid_Y_I">integralY</string>
    <string name="pid_Y_D">derivativeY</string>

    <string name="pid_P_P">proportionalP</string>
    <string name="pid_P_I">integralP</string>
    <string name="pid_P_D">derivativeP</string>

    <string name="pid_R_P">proportionalR</string>
    <string name="pid_R_I">integralR</string>
    <string name="pid_R_D">derivativeR</string>

</resources>
